src/news-roller/news-roller.css
:host
{
    display: grid;
    position: relative;
    width: 100%;
    height: 100%;

    --label-size: 1fr;
    --screen-size: 3fr;
}

:host([side="left"])
{
    grid-template-columns: var(--label-size) var(--screen-size);
}
:host([side="left"]) #labels_container
{
    order: -1;
    border-right-width: 1px;
    flex-direction: column;
}

:host([side="right"])
{
    grid-template-columns: var(--screen-size) var(--label-size);
}
:host([side="right"]) #labels_container
{
    order: 1;
    border-left-width: 1px;
    flex-direction: column;
}

:host([side="top"])
{
    grid-template-rows: var(--label-size) var(--screen-size);
}
:host([side="top"]) #labels_container
{
    order: -1;
    border-bottom-width: 1px;
    flex-direction: row;
}

:host([side="bottom"])
{
    grid-template-rows: var(--screen-size) var(--label-size);
}
:host([side="bottom"]) #labels_container
{
    order: 1;
    border-top-width: 1px;
    flex-direction: row;
}

#labels_container
{
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: stretch;
    border: 0px solid silver;
    height: 100%;
}
#labels_container ::slotted(*)
{
    flex-grow: 1;
}
#labels_container ::slotted(.show)
{
    background-color: yellow;
}

#screens_container
{
    position: relative;
    height: 100%;
    overflow: hidden;
}
#screens_container ::slotted(*)
{
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    animation: DefaultAppear 500ms;
    animation-timing-function: ease-out;
    animation-fill-mode: both;
}
#screens_container ::slotted(:not(.show))
{
    animation-name: DefaultDisappear;
}
#screens_container ::slotted(img)
{
    object-fit: cover;
}

@keyframes DefaultAppear
{
    from {
        filter: opacity(0%);
        visibility: visible;
    }

    to {
        filter: opacity(100%);
    }
}

@keyframes DefaultDisappear
{
    from {
        filter: opacity(100%);
    }

    to {
        filter: opacity(0%);
        visibility: hidden;
    }
}

